[project]
name = "resolvable-uris"
version = "0.1.0"
description = "Resolvable URI service using Oxigraph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pyoxigraph>=0.4.0",
  "rdflib>=7.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
